LOGCXX-214: Memory leak when using shared APR